--- a/index.html
+++ b/index.html
@@ -1080,6 +1080,24 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="automation & web scraping">
+              <a href="https://github.com/AmeUr56/Jumiadz-Crawler" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/lkeria.jpeg" alt="Lkeria" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Lkeria Cralwer</h3>
+
+                <p class="project-category">Automation & Web Scrabing</p>
+
+              </a>
+            </li>
+
           </ul>
 
         </section>
