Fixed Sidebar Error

--- a/index.html
+++ b/index.html
@@ -1034,10 +1034,10 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/genderrecognizer.png" alt="Arif AI" loading="lazy">
+                  <img src="./assets/images/genderrecognizer.png" alt="Gender Recognition" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Erif AI</h3>
+                <h3 class="project-title">Gender Recognition</h3>
 
                 <p class="project-category">Deep Learning | Artificial Intelligence</p>
 
@@ -1062,6 +1062,26 @@
               </a>
             </li>
             
+          <!--
+            <li class="project-item  active" data-filter-item data-category="data analysis">
+              <a href="https://github.com/ameUr56//" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/ookla.png" alt="Ookla" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Internet Availability in the World Analysis</h3>
+
+                <p class="project-category">Data Analysis</p>
+
+              </a>
+            </li>
+          -->
+
             <li class="project-item  active" data-filter-item data-category="backend/api development">
               <a href="https://github.com/AmeUr56/Draw-Graph" target="_blank">
 
@@ -1097,6 +1117,26 @@
 
               </a>
             </li>
+
+          <!--
+            <li class="project-item  active" data-filter-item data-category="data analysis">
+              <a href="https://github.com/ameUr56/Internet-Speed-Progress-Algeria/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/algerie_tel.jpeg" alt="Internet Algeria" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Internet Speed Progress in Algeria Analysis</h3>
+
+                <p class="project-category">Data Analysis & API Development</p>
+
+              </a>
+            </li>
+          -->
 
           </ul>
 
