Added Algerian Internet Connectivity Project

--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/lkeria.jpeg" alt="Lkeria" loading="lazy">
+                  <img src="./assets/images/lkeria.png" alt="Lkeria" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Lkeria Cralwer</h3>
@@ -1118,9 +1118,9 @@
               </a>
             </li>
 
-          <!--
+
             <li class="project-item  active" data-filter-item data-category="data analysis">
-              <a href="https://github.com/ameUr56/Internet-Speed-Progress-Algeria/" target="_blank">
+              <a href="https://github.com/AmeUr56/Algerian-Internet-Connectivity" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -1130,13 +1130,13 @@
                   <img src="./assets/images/algerie_tel.jpeg" alt="Internet Algeria" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Internet Speed Progress in Algeria Analysis</h3>
+                <h3 class="project-title">Algerian Internet Connectivity</h3>
 
                 <p class="project-category">Data Analysis & API Development</p>
 
               </a>
             </li>
-          -->
+
 
           </ul>
 
