--- a/index.html
+++ b/index.html
@@ -500,6 +500,8 @@
             <li class="skills-item">- Project Management</li>
             <li class="skills-item">- Leadership</li>
             <li class="skills-item">- Teamwork</li>
+            <li class="skills-item">- Story Telling</li>
+            <li class="skills-item">- Clickup</li>
             <li class="skills-item">- Python</li>
             <li class="skills-item">- Tensorflow</li>
             <li class="skills-item">- Keras</li>
