Added Venexus Global Capital Experience

--- a/index.html
+++ b/index.html
@@ -639,6 +639,18 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Data Scientist</h4>
+              <h5 class="h4 timeline-item-title">Venexus Global Capital</h5>
+              <span>January 2025 - Present</span>
+
+              <p class="timeline-text">
+                As a Data Scientist at Venexus Global Capital, I leverage advanced data analysis, machine learning, and deep learning techniques to drive strategic decision-making and business growt
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Data Entry Specialist Freelance</h4>
               <h5 class="h4 timeline-item-title">Bechar Tax Directorate</h5>
               <span>October 2024 - Present</span>
@@ -651,6 +663,7 @@
               </p>
 
             </li>
+
           </ol>
 
         </section>
