--- a/index.html
+++ b/index.html
@@ -498,19 +498,13 @@
 
           <ul class="skills-list">
             <li class="skills-item">- Project Management</li>
+            <li class="skills-item">- Prompt Engineering</li>
             <li class="skills-item">- Leadership</li>
             <li class="skills-item">- Teamwork</li>
             <li class="skills-item">- Story Telling</li>
             <li class="skills-item">- Clickup</li>
-            <li class="skills-item">- Python</li>
-            <li class="skills-item">- Tensorflow</li>
-            <li class="skills-item">- Keras</li>
-            <li class="skills-item">- Scikit-learn</li>
-            <li class="skills-item">- Data Wrangling</li>
-            <li class="skills-item">- Scrapy</li>
-            <li class="skills-item">- Git | Github</li>
-            <li class="skills-item">- Apache arrow/parquet</li>
-            <li class="skills-item">- Visualization</li>
+            <li class="skills-item">- Data Visulization</li>
+            <li class="skills-item">- Cryptography</li>
             <li class="skills-item">- AutoML</li>
             <li class="skills-item">- Data Pipelines</li>
           </ul>
