--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
       <div class="sidebar-info">
 
-        <figure class="avatar-box">
+        <!--<figure class="avatar-box">
           <img src="./assets/images/my-image.jpg" alt="Ameur Boughers" width="30">
-        </figure>
+        </figure>-->
 
         <div class="info-content">
           <h6 class="name"><small>Ameur Boughers</small></h6>
