Added SHIELD Experience

--- a/index.html
+++ b/index.html
@@ -628,9 +628,8 @@
 
             <h3 class="h3">Experience</h3>
           </div>
-
+          
           <ol class="timeline-list">
-
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Data Scientist</h4>
@@ -643,6 +642,17 @@
 
             </li>
 
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">AI Researcher</h4>
+              <h5 class="h4 timeline-item-title">SHIELD</h5>
+              <span>January 2025 - Present</span>
+
+              <p class="timeline-text">
+                As an AI Researcher at SHIELD, I develop AI-driven solutions for defense and aerospace, focusing on autonomous drones, surveillance systems, and predictive maintenance. I design models to enhance decision-making and operational efficiency, collaborate on UAV advancements, and explore cutting-edge AI methodologies.              </p>
+
+            </li>
+            
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Data Entry Specialist Freelance</h4>
