Added HP Data Science Certificate

--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
               </p>
 
             </li>
-
+            <!--
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">AI Researcher</h4>
@@ -652,7 +652,7 @@
                 As an AI Researcher at SHIELD, I develop AI-driven solutions for defense and aerospace, focusing on autonomous drones, surveillance systems, and predictive maintenance. I design models to enhance decision-making and operational efficiency, collaborate on UAV advancements, and explore cutting-edge AI methodologies.              </p>
 
             </li>
-            
+            -->
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Data Entry Specialist Freelance</h4>
@@ -722,6 +722,14 @@
               </p>
             </li>
 
+            <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Data Science & Analytics</h4>
+              <span>Company: HP</span>
+              <a href="./certifications/Data Science & Analytics HP.pdf" target="_blank">View Certificate</a>
+              <p class="timeline-text">
+                Gained foundational knowledge in project planning, risk management, and team leadership techniques.
+              </p>
+            </li>
             <!-- Add more certificates here -->
 
           </ol>
