--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
       <div class="sidebar-info">
 
-        <!--<figure class="avatar-box">
-          <img src="./assets/images/my-image.jpg" alt="Ameur Boughers" width="30">
-        </figure>-->
+        <figure class="avatar-box">
+          <img src="./profile-pic.jpg" alt="Ameur Boughers" width="30">
+        </figure>
 
         <div class="info-content">
           <h6 class="name"><small>Ameur Boughers</small></h6>
@@ -860,7 +860,10 @@
               <button data-filter-btn>Automation & Web Scraping</button>
             </li>
 
-   
+            <li class="filter-item">
+              <button data-filter-btn>CLI & Shell</button>
+            </li>
+
           </ul>
 
           <!-- filter-select-box -->
@@ -903,12 +906,17 @@
                 <button data-filter-btn>Automation & Web Scraping</button>
               </li>
 
+              <li class="select-item">
+                <button data-filter-btn>CLI & Shell</button>
+              </li>
+
             </ul>
 
           </div>
 
           <!-- projects -->
           <ul class="project-list">
+
             <li class="project-item  active" data-filter-item data-category="data analysis">
               <a href="https://github.com/ameUr56/Covid-19-EDA/" target="_blank">
 
@@ -995,6 +1003,25 @@
                 <h3 class="project-title">Telecom Churn Customers Prediction</h3>
 
                 <p class="project-category">Data Science</p>
+
+              </a>
+            </li>
+
+                   
+            <li class="project-item  active" data-filter-item data-category="cli & shell">
+              <a href="https://github.com/ameUr56/CipherMate" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/ciphermate.png" alt="El-khabar" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">CipherMate</h3>
+
+                <p class="project-category">CLI & Shell</p>
 
               </a>
             </li>
