Added Naftal Intern

--- a/index.html
+++ b/index.html
@@ -641,6 +641,21 @@
               </p>
 
             </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Software Engineer Intern</h4>
+              <h5 class="h4 timeline-item-title">Naftal</h5>
+              <span>February 2025 - Present</span>
+
+              <p class="timeline-text">
+                Working with my team to develop a web/application solution for Naftal.
+                Handling complex parts of the project when needed.
+                Collaborating with university and company supervisors to align with project goals.
+</p>
+
+            </li>
+
             <!--
             <li class="timeline-item">
 
