Added CLIs & Shells Field

--- a/index.html
+++ b/index.html
@@ -335,6 +335,23 @@
               </div>
 
             </li>
+
+            <li class="service-item">
+
+              <div class="service-icon-box">
+                <img src="./assets/images/clis_shells.svg" alt="mobile app icon" width="50">
+              </div>
+
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">CLIs & Shells</h4>
+
+                <p class="service-item-text">
+                  Building easy-to-use command-line tools and interactive shells to automate tasks and improve workflows.
+                </p>
+              </div>
+
+            </li>
+
           </ul>
 
         </section>
@@ -379,7 +396,7 @@
             </li>
 
 
-            <!-- <li class="testimonials-item">
+            <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
