Added Sor3a-API Project

--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,25 @@
               </a>
             </li>
 
+            
+            <li class="project-item  active" data-filter-item data-category="backend/api development">
+              <a href="https://github.com/AmeUr56/Sor3a-API" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/sor3a_api.png" alt="EchoChatbot" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Sor3a API</h3>
+
+                <p class="project-category">Backend/API Development & Database Management | SQL</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="automation & web scraping">
               <a href="https://github.com/AmeUr56/Jumiadz-Crawler" target="_blank">
 
