Added FinMouse project

--- a/index.html
+++ b/index.html
@@ -1095,6 +1095,25 @@
               </a>
             </li>
 
+            
+            <li class="project-item  active" data-filter-item data-category="ml | dl | ai">
+              <a href="https://github.com/AmeUr56/FinMouse" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/FinMouse.png" alt="FinMouse" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">FinMouse</h3>
+
+                <p class="project-category">Deep Learning | Artificial Intelligence</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="backend/api development">
               <a href="https://github.com/AmeUr56/MusicDoser" target="_blank">
 
