Added Drufiy Experience

--- a/index.html
+++ b/index.html
@@ -649,6 +649,18 @@
           <ol class="timeline-list">
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">AI & Backend Lead</h4>
+              <h5 class="h4 timeline-item-title">Drufiy</h5>
+              <span>Febraury 2025 - Present</span>
+
+              <p class="timeline-text">
+                Leading the AI and backend development of Drufiy, an AI-powered troubleshooting software that automates device diagnostics, predictive maintenance, and self-healing capabilities.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Data Scientist</h4>
               <h5 class="h4 timeline-item-title">Venexus Global Capital</h5>
               <span>January 2025 - Present</span>
