Added Two Projects

--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                 Working with my team to develop a web/application solution for Naftal.
                 Handling complex parts of the project when needed.
                 Collaborating with university and company supervisors to align with project goals.
-</p>
+              </p>
 
             </li>
 
@@ -1125,6 +1125,24 @@
 
               </a>
             </li>
+            
+            <li class="project-item  active" data-filter-item data-category="backend/api development">
+              <a href="https://github.com/AmeUr56/Faculty-TV-API" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/faculty_tv_api.jpg" alt="FacultyTV" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Faculty TV API</h3>
+
+                <p class="project-category">Backend/API Development & Database Management | SQL</p>
+
+              </a>
+            </li>
 
             <li class="project-item  active" data-filter-item data-category="data science | ml">
               <a href="https://github.com/AmeUr56/House-Price-Prediction" target="_blank">
@@ -1291,6 +1309,23 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="artificial intelligence | dl">
+              <a href="https://github.com/AmeUr56/SuspAlert" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/suspalert.png" alt="SuspAlert" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">SuspAlert</h3>
+
+                <p class="project-category">Deep Learning | Artificial Intelligence & Front End/Backend/API Development</p>
+
+              </a>
+            </li>
 
             <li class="project-item  active" data-filter-item data-category="data analysis">
               <a href="https://github.com/AmeUr56/Algerian-Internet-Connectivity" target="_blank">
